making list and form buttons the same and aligned, text formatting for help screen, fixed margins/padding,

--- a/Purchasing.Web/Css/Site.css
+++ b/Purchasing.Web/Css/Site.css
@@ -325,7 +325,7 @@ table .table-bool-good {color:green;}
 /* ---------------- */
 /*    form          */
 /* ---------------- */
-form {margin:1em 0; text-align:left;}
+form {margin:0em 0; text-align:left;}
 form ul li, .display-form ul li {list-style-type:none;margin:10px 0;}
 form ul li ul li, .display-form ul li ul li{margin:2px 0;}
 /*form .col1 {text-align:right; width:200px;} not really used*/ 
@@ -412,6 +412,15 @@ table thead form .field-validation-error{color:#000000;}
 /* ---------------
    Tyler is adding here to not step on Trish's toes
 -------------------- */
-#WizardNavigation li a{ padding: 0.4em 1em;font-size: 1em;box-shadow: 0 0 1px inset, 0 0 5px #DDDDDD;}
+#WizardNavigation li a{ padding: 0.4em 1em;font-size: 12px;box-shadow: 0 0 1px inset, 0 0 5px #DDDDDD;}
 #WizardNavigation .ui-button-text-only .ui-button-text { padding: 0; margin:0;display: inherit;}
 #wizard-instructions-form { margin: 10px;padding: 10px;}
+#wizard-instructions-form p, #wizard-instructions-table p { line-height: 1.5em;}
+#WizardNavigation li { padding: 0;}
+nav #WizardNavigation { text-align: left; margin-bottom: 1em;}
+div.dataTables_wrapper { margin: 1em 0 2em 0;}
+
+/* 
+#WizardNavigation li:first-child { width: 50%;}
+#WizardNavigation li:nth-child(2){ width:50%;}
+*/
